[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/ResourceController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/TimeLimit.gd" type="Script" id=2]
[ext_resource path="res://Scripts/BigScript.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PassiveController.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ResearchTree.gd" type="Script" id=5]
[ext_resource path="res://Art/wood_bg.png" type="Texture" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="PassiveController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Resource_Controller" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Research" type="VBoxContainer" parent="."]
margin_left = 730.739
margin_top = 253.425
margin_right = 792.739
margin_bottom = 519.425
alignment = 1
script = ExtResource( 5 )

[node name="Title" type="Label" parent="Research"]
margin_top = 18.0
margin_right = 62.0
margin_bottom = 32.0
text = "Research"

[node name="Warp1" type="Button" parent="Research"]
margin_top = 36.0
margin_right = 62.0
margin_bottom = 56.0

[node name="Warp2" type="Button" parent="Research"]
margin_top = 60.0
margin_right = 62.0
margin_bottom = 80.0

[node name="Warp3" type="Button" parent="Research"]
margin_top = 84.0
margin_right = 62.0
margin_bottom = 104.0

[node name="Spell1" type="Button" parent="Research"]
margin_top = 108.0
margin_right = 62.0
margin_bottom = 128.0

[node name="Spell2" type="Button" parent="Research"]
margin_top = 132.0
margin_right = 62.0
margin_bottom = 152.0

[node name="Spell3" type="Button" parent="Research"]
margin_top = 156.0
margin_right = 62.0
margin_bottom = 176.0

[node name="Production1" type="Button" parent="Research"]
margin_top = 180.0
margin_right = 62.0
margin_bottom = 200.0

[node name="Production2" type="Button" parent="Research"]
margin_top = 204.0
margin_right = 62.0
margin_bottom = 224.0

[node name="Production3" type="Button" parent="Research"]
margin_top = 228.0
margin_right = 62.0
margin_bottom = 248.0

[node name="Elements" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 290.0
margin_top = 40.0
margin_right = 249.0
margin_bottom = -510.0
custom_constants/separation = 50

[node name="Air" type="VBoxContainer" parent="Elements"]
margin_right = 96.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Count" type="Label" parent="Elements/Air"]
margin_right = 96.0
margin_bottom = 14.0
text = "Air:"

[node name="Subresource" type="Label" parent="Elements/Air" groups=["air"]]
margin_top = 24.0
margin_right = 96.0
margin_bottom = 38.0
text = "Cloud Puffs: 0"

[node name="Earth" type="VBoxContainer" parent="Elements"]
margin_left = 146.0
margin_right = 272.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Count" type="Label" parent="Elements/Earth"]
margin_right = 126.0
margin_bottom = 14.0
text = "Earth:"

[node name="Subresource" type="Label" parent="Elements/Earth" groups=["earth"]]
margin_top = 24.0
margin_right = 126.0
margin_bottom = 38.0
text = "Obsidian Chunks: 0"

[node name="Fire" type="VBoxContainer" parent="Elements"]
margin_left = 322.0
margin_right = 440.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Count" type="Label" parent="Elements/Fire"]
margin_right = 118.0
margin_bottom = 14.0
text = "Fire:"

[node name="Subresource" type="Label" parent="Elements/Fire" groups=["fire"]]
margin_top = 24.0
margin_right = 118.0
margin_bottom = 38.0
text = "Glowing Roses: 0"

[node name="Water" type="VBoxContainer" parent="Elements"]
margin_left = 490.0
margin_right = 604.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="Count" type="Label" parent="Elements/Water"]
margin_right = 114.0
margin_bottom = 14.0
text = "Water:"

[node name="Subresource" type="Label" parent="Elements/Water" groups=["water"]]
margin_top = 24.0
margin_right = 114.0
margin_bottom = 38.0
text = "Coral Crystals: 0"

[node name="Light" type="VBoxContainer" parent="Elements"]
margin_left = 654.0
margin_right = 692.0
margin_bottom = 50.0

[node name="Count" type="Label" parent="Elements/Light"]
margin_right = 38.0
margin_bottom = 14.0
text = "Light:"
align = 2

[node name="LightHBox" type="HBoxContainer" parent="."]
visible = false
margin_left = 20.0
margin_top = 40.0
margin_right = 983.0
margin_bottom = 90.0
alignment = 2

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 283.043
margin_top = 245.799
margin_right = 704.043
margin_bottom = 514.799

[node name="Air" type="VBoxContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Button1" type="Button" parent="TabContainer/Air"]
margin_right = 413.0
margin_bottom = 20.0
text = "Channel Air"

[node name="Gather" type="Button" parent="TabContainer/Air" groups=["air"]]
margin_top = 24.0
margin_right = 413.0
margin_bottom = 44.0
text = "Bottle Cloud Puffs"

[node name="Passive0" type="Button" parent="TabContainer/Air" groups=["advanced", "passive_button"]]
margin_top = 48.0
margin_right = 413.0
margin_bottom = 68.0

[node name="Timer" type="Timer" parent="TabContainer/Air/Passive0"]

[node name="Label0" type="Label" parent="TabContainer/Air" groups=["advanced"]]
margin_top = 72.0
margin_right = 413.0
margin_bottom = 86.0
align = 1

[node name="Passive1" type="Button" parent="TabContainer/Air" groups=["air", "passive_button"]]
margin_top = 90.0
margin_right = 413.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Air/Passive1"]

[node name="Label1" type="Label" parent="TabContainer/Air"]
margin_top = 114.0
margin_right = 413.0
margin_bottom = 128.0
align = 1

[node name="Passive2" type="Button" parent="TabContainer/Air" groups=["air", "passive_button"]]
margin_top = 132.0
margin_right = 413.0
margin_bottom = 152.0

[node name="Timer" type="Timer" parent="TabContainer/Air/Passive2"]

[node name="Label2" type="Label" parent="TabContainer/Air"]
margin_top = 156.0
margin_right = 413.0
margin_bottom = 170.0
align = 1

[node name="Passive3" type="Button" parent="TabContainer/Air" groups=["air", "passive_button"]]
margin_top = 174.0
margin_right = 413.0
margin_bottom = 194.0

[node name="Timer" type="Timer" parent="TabContainer/Air/Passive3"]

[node name="Label3" type="Label" parent="TabContainer/Air"]
margin_top = 198.0
margin_right = 413.0
margin_bottom = 212.0
align = 1

[node name="Passive4" type="Button" parent="TabContainer/Air" groups=["air", "passive_button"]]
margin_top = 216.0
margin_right = 413.0
margin_bottom = 236.0

[node name="Timer" type="Timer" parent="TabContainer/Air/Passive4"]

[node name="Label4" type="Label" parent="TabContainer/Air"]
margin_top = 240.0
margin_right = 413.0
margin_bottom = 254.0
align = 1

[node name="Earth" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Button1" type="Button" parent="TabContainer/Earth"]
margin_right = 513.0
margin_bottom = 20.0
text = "Channel Earth"

[node name="Gather" type="Button" parent="TabContainer/Earth" groups=["earth"]]
margin_top = 24.0
margin_right = 513.0
margin_bottom = 44.0
text = "Mine Obsidian Chunks"

[node name="Passive0" type="Button" parent="TabContainer/Earth"]
margin_top = 48.0
margin_right = 513.0
margin_bottom = 68.0

[node name="Timer" type="Timer" parent="TabContainer/Earth/Passive0"]

[node name="Label0" type="Label" parent="TabContainer/Earth"]
margin_top = 72.0
margin_right = 513.0
margin_bottom = 86.0
align = 1

[node name="Passive1" type="Button" parent="TabContainer/Earth" groups=["earth"]]
margin_top = 48.0
margin_right = 513.0
margin_bottom = 68.0

[node name="Timer" type="Timer" parent="TabContainer/Earth/Passive1"]

[node name="Label1" type="Label" parent="TabContainer/Earth"]
margin_top = 72.0
margin_right = 513.0
margin_bottom = 86.0
align = 1

[node name="Passive2" type="Button" parent="TabContainer/Earth" groups=["earth"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Earth/Passive2"]

[node name="Label2" type="Label" parent="TabContainer/Earth"]
margin_top = 114.0
margin_right = 513.0
margin_bottom = 128.0
align = 1

[node name="Passive3" type="Button" parent="TabContainer/Earth" groups=["earth"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Earth/Passive3"]

[node name="Label3" type="Label" parent="TabContainer/Earth"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Passive4" type="Button" parent="TabContainer/Earth" groups=["earth"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Earth/Passive4"]

[node name="Label4" type="Label" parent="TabContainer/Earth"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Fire" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Button1" type="Button" parent="TabContainer/Fire"]
margin_right = 513.0
margin_bottom = 20.0
text = "Channel Fire"

[node name="Gather" type="Button" parent="TabContainer/Fire" groups=["fire"]]
margin_top = 24.0
margin_right = 513.0
margin_bottom = 44.0
text = "Cut Glowing Rose Bushes"

[node name="Passive0" type="Button" parent="TabContainer/Fire"]
margin_top = 48.0
margin_right = 513.0
margin_bottom = 68.0

[node name="Timer" type="Timer" parent="TabContainer/Fire/Passive0"]

[node name="Label0" type="Label" parent="TabContainer/Fire"]
margin_top = 72.0
margin_right = 513.0
margin_bottom = 86.0
align = 1

[node name="Passive1" type="Button" parent="TabContainer/Fire" groups=["fire"]]
margin_top = 48.0
margin_right = 513.0
margin_bottom = 68.0

[node name="Timer" type="Timer" parent="TabContainer/Fire/Passive1"]

[node name="Label1" type="Label" parent="TabContainer/Fire"]
margin_top = 72.0
margin_right = 513.0
margin_bottom = 86.0
align = 1

[node name="Passive2" type="Button" parent="TabContainer/Fire" groups=["fire"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Fire/Passive2"]

[node name="Label2" type="Label" parent="TabContainer/Fire"]
margin_top = 114.0
margin_right = 513.0
margin_bottom = 128.0
align = 1

[node name="Passive3" type="Button" parent="TabContainer/Fire" groups=["fire"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Fire/Passive3"]

[node name="Label3" type="Label" parent="TabContainer/Fire"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Passive4" type="Button" parent="TabContainer/Fire" groups=["fire"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Fire/Passive4"]

[node name="Label4" type="Label" parent="TabContainer/Fire"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Water" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Button1" type="Button" parent="TabContainer/Water"]
margin_right = 513.0
margin_bottom = 20.0
text = "Channel Water"

[node name="Gather" type="Button" parent="TabContainer/Water" groups=["water"]]
margin_top = 24.0
margin_right = 513.0
margin_bottom = 44.0
text = "Collect Coral Crystals"

[node name="Passive0" type="Button" parent="TabContainer/Water"]
margin_top = 48.0
margin_right = 513.0
margin_bottom = 68.0

[node name="Timer" type="Timer" parent="TabContainer/Water/Passive0"]

[node name="Label0" type="Label" parent="TabContainer/Water"]
margin_top = 72.0
margin_right = 513.0
margin_bottom = 86.0
align = 1

[node name="Passive1" type="Button" parent="TabContainer/Water" groups=["water"]]
margin_top = 48.0
margin_right = 513.0
margin_bottom = 68.0

[node name="Timer" type="Timer" parent="TabContainer/Water/Passive1"]

[node name="Label1" type="Label" parent="TabContainer/Water"]
margin_top = 72.0
margin_right = 513.0
margin_bottom = 86.0
align = 1

[node name="Passive2" type="Button" parent="TabContainer/Water" groups=["water"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Water/Passive2"]

[node name="Label2" type="Label" parent="TabContainer/Water"]
margin_top = 114.0
margin_right = 513.0
margin_bottom = 128.0
align = 1

[node name="Passive3" type="Button" parent="TabContainer/Water" groups=["water"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Water/Passive3"]

[node name="Label3" type="Label" parent="TabContainer/Water"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Passive4" type="Button" parent="TabContainer/Water" groups=["water"]]
margin_top = 90.0
margin_right = 513.0
margin_bottom = 110.0

[node name="Timer" type="Timer" parent="TabContainer/Water/Passive4"]

[node name="Label4" type="Label" parent="TabContainer/Water"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Light" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Button" type="Button" parent="TabContainer/Light"]
margin_right = 513.0
margin_bottom = 20.0
text = "Combine Elements"

[node name="Passive1" type="Button" parent="TabContainer/Light"]
margin_right = 12.0
margin_bottom = 20.0

[node name="Timer" type="Timer" parent="TabContainer/Light/Passive1"]

[node name="Label1" type="Label" parent="TabContainer/Light"]
margin_right = 40.0
margin_bottom = 14.0

[node name="WARP_SPEED" type="Button" parent="."]
margin_left = 54.883
margin_top = 547.666
margin_right = 156.883
margin_bottom = 567.666
text = "WARP SPEED"

[node name="Timer" type="Timer" parent="WARP_SPEED"]

[node name="Label" type="Label" parent="WARP_SPEED"]
margin_left = -5.30328
margin_top = 28.6378
margin_right = 34.6967
margin_bottom = 42.6378

[node name="TimeUntilTheEnd" type="Timer" parent="."]
script = ExtResource( 2 )

[node name="Display" type="Label" parent="TimeUntilTheEnd"]
margin_left = 877.433
margin_top = 507.329
margin_right = 995.433
margin_bottom = 573.329

[node name="LogBox" type="Label" parent="."]
margin_left = 25.9547
margin_top = 461.409
margin_right = 213.955
margin_bottom = 554.409
autowrap = true
clip_text = true

[node name="UI" type="Node" parent="."]

[node name="Background" type="Sprite" parent="UI"]
position = Vector2( 112.5, 157.5 )

[node name="Line1" type="Line2D" parent="UI"]
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="Line2" type="Line2D" parent="UI"]

[node name="WoodPanel" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.488, 0.4 )
texture = ExtResource( 6 )

[connection signal="pressed" from="Research/Warp1" to="Research" method="_on_warp1_pressed"]
[connection signal="pressed" from="Research/Warp2" to="Research" method="_on_warp2_pressed"]
[connection signal="pressed" from="Research/Warp3" to="Research" method="_on_warp3_pressed"]
[connection signal="pressed" from="Research/Spell1" to="Research" method="_on_spell1_pressed"]
[connection signal="pressed" from="Research/Spell2" to="Research" method="_on_spell2_pressed"]
[connection signal="pressed" from="Research/Spell3" to="Research" method="_on_spell3_pressed"]
[connection signal="pressed" from="Research/Production1" to="Research" method="_on_prod1_pressed"]
[connection signal="pressed" from="Research/Production2" to="Research" method="_on_prod2_pressed"]
[connection signal="pressed" from="Research/Production3" to="Research" method="_on_prod3_pressed"]
[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="TabContainer/Air/Button1" to="." method="_on_air_button_pressed"]
[connection signal="pressed" from="TabContainer/Air/Gather" to="Resource_Controller" method="_on_air_sub_gather_button_pressed"]
[connection signal="pressed" from="TabContainer/Air/Passive0" to="PassiveController" method="_on_air_passive0_pressed"]
[connection signal="timeout" from="TabContainer/Air/Passive0/Timer" to="PassiveController" method="_on_air_passive0_timeout"]
[connection signal="pressed" from="TabContainer/Air/Passive1" to="PassiveController" method="_on_air_passive1_pressed"]
[connection signal="timeout" from="TabContainer/Air/Passive1/Timer" to="PassiveController" method="_on_air_passive1_timeout"]
[connection signal="pressed" from="TabContainer/Air/Passive2" to="PassiveController" method="_on_air_passive2_pressed"]
[connection signal="timeout" from="TabContainer/Air/Passive2/Timer" to="PassiveController" method="_on_air_passive2_timeout"]
[connection signal="pressed" from="TabContainer/Air/Passive3" to="PassiveController" method="_on_air_passive3_pressed"]
[connection signal="timeout" from="TabContainer/Air/Passive3/Timer" to="PassiveController" method="_on_air_passive3_timeout"]
[connection signal="pressed" from="TabContainer/Air/Passive4" to="PassiveController" method="_on_air_passive4_pressed"]
[connection signal="timeout" from="TabContainer/Air/Passive4/Timer" to="PassiveController" method="_on_air_passive4_timeout"]
[connection signal="pressed" from="TabContainer/Earth/Button1" to="." method="_on_earth_button_pressed"]
[connection signal="pressed" from="TabContainer/Earth/Gather" to="Resource_Controller" method="_on_earth_sub_gather_button_pressed"]
[connection signal="pressed" from="TabContainer/Earth/Passive0" to="PassiveController" method="_on_earth_passive0_pressed"]
[connection signal="timeout" from="TabContainer/Earth/Passive0/Timer" to="PassiveController" method="_on_earth_passive0_timeout"]
[connection signal="pressed" from="TabContainer/Earth/Passive1" to="PassiveController" method="_on_earth_passive1_pressed"]
[connection signal="timeout" from="TabContainer/Earth/Passive1/Timer" to="PassiveController" method="_on_earth_passive1_timeout"]
[connection signal="pressed" from="TabContainer/Earth/Passive2" to="PassiveController" method="_on_earth_passive2_pressed"]
[connection signal="timeout" from="TabContainer/Earth/Passive2/Timer" to="PassiveController" method="_on_earth_passive2_timeout"]
[connection signal="pressed" from="TabContainer/Earth/Passive3" to="PassiveController" method="_on_earth_passive3_pressed"]
[connection signal="timeout" from="TabContainer/Earth/Passive3/Timer" to="PassiveController" method="_on_earth_passive3_timeout"]
[connection signal="pressed" from="TabContainer/Earth/Passive4" to="PassiveController" method="_on_earth_passive4_pressed"]
[connection signal="timeout" from="TabContainer/Earth/Passive4/Timer" to="PassiveController" method="_on_earth_passive4_timeout"]
[connection signal="pressed" from="TabContainer/Fire/Button1" to="." method="_on_fire_button_pressed"]
[connection signal="pressed" from="TabContainer/Fire/Gather" to="Resource_Controller" method="_on_fire_sub_gather_button_pressed"]
[connection signal="pressed" from="TabContainer/Fire/Passive0" to="PassiveController" method="_on_fire_passive0_pressed"]
[connection signal="timeout" from="TabContainer/Fire/Passive0/Timer" to="PassiveController" method="_on_fire_passive0_timeout"]
[connection signal="pressed" from="TabContainer/Fire/Passive1" to="PassiveController" method="_on_fire_passive1_pressed"]
[connection signal="timeout" from="TabContainer/Fire/Passive1/Timer" to="PassiveController" method="_on_fire_passive1_timeout"]
[connection signal="pressed" from="TabContainer/Fire/Passive2" to="PassiveController" method="_on_fire_passive2_pressed"]
[connection signal="timeout" from="TabContainer/Fire/Passive2/Timer" to="PassiveController" method="_on_fire_passive2_timeout"]
[connection signal="pressed" from="TabContainer/Fire/Passive3" to="PassiveController" method="_on_fire_passive3_pressed"]
[connection signal="timeout" from="TabContainer/Fire/Passive3/Timer" to="PassiveController" method="_on_fire_passive3_timeout"]
[connection signal="pressed" from="TabContainer/Fire/Passive4" to="PassiveController" method="_on_fire_passive4_pressed"]
[connection signal="timeout" from="TabContainer/Fire/Passive4/Timer" to="PassiveController" method="_on_fire_passive4_timeout"]
[connection signal="pressed" from="TabContainer/Water/Button1" to="." method="_on_water_button_pressed"]
[connection signal="pressed" from="TabContainer/Water/Gather" to="Resource_Controller" method="_on_water_sub_gather_button_pressed"]
[connection signal="pressed" from="TabContainer/Water/Passive0" to="PassiveController" method="_on_water_passive0_pressed"]
[connection signal="timeout" from="TabContainer/Water/Passive0/Timer" to="PassiveController" method="_on_water_passive0_timeout"]
[connection signal="pressed" from="TabContainer/Water/Passive1" to="PassiveController" method="_on_water_passive1_pressed"]
[connection signal="timeout" from="TabContainer/Water/Passive1/Timer" to="PassiveController" method="_on_water_passive1_timeout"]
[connection signal="pressed" from="TabContainer/Water/Passive2" to="PassiveController" method="_on_water_passive2_pressed"]
[connection signal="timeout" from="TabContainer/Water/Passive2/Timer" to="PassiveController" method="_on_water_passive2_timeout"]
[connection signal="pressed" from="TabContainer/Water/Passive3" to="PassiveController" method="_on_water_passive3_pressed"]
[connection signal="timeout" from="TabContainer/Water/Passive3/Timer" to="PassiveController" method="_on_water_passive3_timeout"]
[connection signal="pressed" from="TabContainer/Water/Passive4" to="PassiveController" method="_on_water_passive4_pressed"]
[connection signal="timeout" from="TabContainer/Water/Passive4/Timer" to="PassiveController" method="_on_water_passive4_timeout"]
[connection signal="pressed" from="TabContainer/Light/Button" to="." method="_on_light_button_pressed"]
[connection signal="pressed" from="TabContainer/Light/Passive1" to="PassiveController" method="_on_light_passive1_pressed"]
[connection signal="timeout" from="TabContainer/Light/Passive1/Timer" to="PassiveController" method="_on_light_passive1_timeout"]
[connection signal="pressed" from="WARP_SPEED" to="." method="_on_warp_button_pressed"]
[connection signal="timeout" from="WARP_SPEED/Timer" to="." method="_on_warp_timer_timeout"]
[connection signal="timeout" from="TimeUntilTheEnd" to="TimeUntilTheEnd" method="_time_is_up"]
